tests/NormalTests/paczka1/small_fuzzy/65279647.err
Error in line 7: S9 A12 31,7
Error in line 9: S9 S529 76,3
Error in line 10: S9 S529 11,0
Error in line 11: S9 A498 92,3
